server/.happypack/s-129984332
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/index.js: Only one default export allowed per module. (18:0)

[0m [90m 16 | [39m}
 [90m 17 | [39m
[31m[1m>[22m[39m[90m 18 | [39m[36mexport[39m [36mdefault[39m rootReducer[33m;[39m
 [90m    | [39m[31m[1m^[22m[39m
 [90m 19 | [39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/index.js: Only one default export allowed per module. (18:0)

[0m [90m 16 | [39m}
 [90m 17 | [39m
[31m[1m>[22m[39m[90m 18 | [39m[36mexport[39m [36mdefault[39m rootReducer[33m;[39m
 [90m    | [39m[31m[1m^[22m[39m
 [90m 19 | [39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)